# mincenter

./: .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.pm2  HYBRID_DEPLOY.md  README.md  database_data_dump.sql  database_full_dump.sql  database_schema_dump.sql  debug-502.sh  docker-compose.deploy.yml  docker-compose.hybrid.yml  docker-compose.override.yml  docker-compose.pm2.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  env-files-guide.md  env.example  env.subdomain.example  mincenter_server_dump.sql  my-config.json  package-lock.json  readme_deploy.md  secrets-config.example.json  setup-guide.md  setup-secrets.sh
backends/api/: .cursorrules  .gitignore  .rsync-exclude  Cargo.toml  Dockerfile  test_password.rs
backends/api/database/: add_post_fields.sql  init.sql  seed.sql
backends/api/database/migrations/: 20250103000001_create_post_management_tables.sql  20250104000001_uuid_to_auto_increment.sql  20250104000003_fix_post_management_uuid_types.sql  20250803050515_create_initial_tables.sql
backends/api/migrations/: 20240320000000_create_users_table.sql  20240320000001_create_menus_table.sql  20240320000002_create_pages_table.sql  20240320000003_add_calendar_public_field.sql  20240320000004_add_calendar_to_menu_type.sql  20240623000000_add_slug_to_boards.sql  20250104000002_create_url_id_tables.sql
backends/api/scripts/: assign_default_roles.sql
backends/api/src/: main.rs
backends/api/src/config/: mod.rs
backends/api/src/database/: mod.rs
backends/api/src/errors/: mod.rs
backends/api/src/handlers/: admin.rs  auth.rs  community.rs  compressed_id_example.rs  menu.rs  mod.rs  page.rs  upload.rs
backends/api/src/handlers/admin/: admin.rs  board.rs  comment_management.rs  menu.rs  mod.rs  post.rs  post_management.rs  rbac.rs  settings.rs  upload.rs
backends/api/src/handlers/site/: auth.rs  calendar.rs  community.rs  menu.rs  mod.rs  page.rs  site_info.rs  upload.rs
backends/api/src/middleware/: cors.rs  mod.rs  rbac.rs
backends/api/src/models/: calendar.rs  community.rs  file.rs  menu.rs  mod.rs  post_management.rs  rbac.rs  response.rs  user.rs
backends/api/src/models/admin/: board.rs  mod.rs  post_management.rs
backends/api/src/models/site/: community.rs  menu.rs  mod.rs  page.rs  settings.rs
backends/api/src/routes/: admin.rs  mod.rs  site.rs
backends/api/src/services/: mod.rs  post_management.rs  thumbnail.rs
backends/api/src/utils/: auth.rs  mod.rs  url_helpers.rs  url_id.rs  uuid_compression.rs
backends/api/static/: README.md
database/: init.sql  (+10 more)
(+326 files in other folders)
