[package]
name = "minshool-api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["multipart","macros"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
bcrypt = "0.15"
hyper = { version = "1.0", features = ["full", "server"] }
